kubernetes/04-schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: nexoryx-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: confluentinc/cp-schema-registry:7.7.1
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: nexoryx-kafka
spec:
  selector:
    app: schema-registry
  ports:
  - port: 8081
